--- a/src/blog/templates/blog/post/list.html
+++ b/src/blog/templates/blog/post/list.html
@@ -5,9 +5,10 @@
     <h1>Lista de Posts</h1>
     {% for post in posts %}
         <h2>
-            <a href="{% url 'blog:post_detail' post.id %}">{{ post.title }}</a>
+            <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
         </h2>
         <p class="date">Publicado el {{ post.publish }} por {{ post.author }}</p>
         {{ post.body|truncatewords:30|linebreaks }}
     {% endfor %}
+    {% include 'blog/post/pagination.html' with page=posts %}
 {% endblock %}
