--- a/src/blog/templates/blog/post/detail.html
+++ b/src/blog/templates/blog/post/detail.html
@@ -6,4 +6,7 @@
   <h1>{{ post.title }}</h1>
   <p class="date">{{ post.content }}</p>
   {{ post.body|linebreaks }}
+  <p>
+    <a href="{% url "blog:post_share" post.id %}"> Comparte este post</a>
+  </p>
 {% endblock %}
